# OpenMP

./: README.md
Linked List/: linked  linked.c
knn/: CMakeLists.txt  k-nearest-neighbours.cpp  makefile
